--- a/myTodoList/vercel.json
+++ b/myTodoList/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "./myTodoList/__init__.py",
+      "src": "./__init__.py",
       "use": "@vercel/python"
     }
   ],
