--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,3 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "/myTodoList/__init__",
-      "use": "@vercel/python"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/myTodoList/__init__"
-    }
-  ]
+  "rewrites": [{ "source": "/(.*)", "destination": "/myTodoList/__init__.py" }]
 }
