--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,3 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "/myTodoList/__init__" }]
+  "rewrites": [{ "source": "/(.*)", "destination": "/myTodoList.index" }]
 }
