--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,15 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "/myTodoList.index" }]
+  "version": 2,
+  "builds": [
+    {
+      "src": "/myTodoList/index.py",
+      "use": "@vercel/python"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/"
+    }
+  ]
 }
