--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "/myTodoList/index.py",
+      "src": "./myTodoList/index.py",
       "use": "@vercel/python"
     }
   ],
